chore: clean up init and upgrade express server

--- a/ts-web-component/index.html
+++ b/ts-web-component/index.html
@@ -8,8 +8,6 @@
     <script type="module" src="/src/index.ts"></script>
   </head>
   <body>
-    <div class="todoapp">
-      <my-todo></my-todo>
-    </div>
+    <div class="todoapp"></div>
   </body>
 </html>
